scripts/nullaway/annotator/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8.txt
../annotator/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/Fns.java:66: error: [NullAway] passing @Nullable parameter 'k' where @NonNull is required
        return theLookup.valAt(k);
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianReader.java:686: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/CachingLookup.java:31: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        val = lookup.valAt(null);
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/InterleavedIndexHopMap.java:233: error: [NullAway] dereferenced expression ((Number)ht.get(s)) is @Nullable
		if(i != ((Number)ht.get(s)).intValue())
		                           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
